# qtwine

./: CHANGELOG  CMakeLists.txt  INSTALL  README
libqtwine/: CMakeLists.txt  Doxyfile
libqtwine/src/: CMakeLists.txt  argumentslist.cpp  argumentslist.h  extendedqprocess.cpp  extendedqprocess.h  filerunner.cpp  filerunner.h  filerunnerplugin.cpp  filerunnerplugin.h  libqtwine.pc.in  libqtwine_export.h  libqtwine_global.h  monitoredprocess.cpp  monitoredprocess.h  regedit.cpp  regedit.h  wineapplication.cpp  wineapplication.h  wineconfiguration.cpp  wineconfiguration.h  winedebugoptions.cpp  winedebugoptions.h  winedlloverrides.cpp  winedlloverrides.h  wineinstallation.cpp  wineinstallation.h  winepath.cpp  winepath.h  wineprefixcreate.cpp  wineprefixcreate.h  wineprocess.cpp  wineprocess.h
libqtwine/src/private/: extendedqprocess_p.h  helpers.cpp  helpers.h  libqtwine_private.h  monitoredprocess_p.h  processioconnector.cpp  processioconnector_p.h  terminal.cpp  wineerrordetector.cpp  wineerrordetector_p.h
qtwine/: CMakeLists.txt
qtwine/forms/: behaviorPreferences.ui  behaviourPreferences.ui  createConfigurationDialog.ui  programShortcutEditor.ui  selectConfigurationForNewShortcutDialog.ui
qtwine/icons/: hisc-app-regedit.svgz  hisc-app-wcmd.svgz  icons.qrc  qtlogo.xpm
qtwine/src/: main.cpp  qtwine.desktop  qtwineapplication.cpp  qtwineapplication.h  qtwinefilerunner.cpp  qtwinefilerunner.h  qtwinemainwindow.cpp  qtwinemainwindow.h  qtwinepreferences.kcfg  qtwinepreferences.kcfgc  qtwineui.rc
qtwine/src/assistants/: commonpages.cpp  commonpages.h  createinstallationassistant.cpp  createinstallationassistant.h  createinstallationassistant_p.h
qtwine/src/dialogs/: configurationeditor.cpp  configurationeditor.h  createconfigurationdialog.cpp  createconfigurationdialog.h  editorpagedialog.cpp  editorpagedialog.h  installationeditor.cpp  installationeditor.h  launcher.cpp  launcher.h  programshortcuteditor.cpp  programshortcuteditor.h  regfilemergedialog.cpp  regfilemergedialog.h  runprogramdialog.cpp  runprogramdialog.h  selectConfigurationForNewShortcutDialog.h
qtwine/src/filerunnerplugins/: registerplugins.cpp
qtwine/src/filerunnerplugins/exe/: dialogs.cpp  dialogs.h  exerunnerpluginwithui.cpp  exerunnerpluginwithui.h
qtwine/src/filerunnerplugins/reg/: regfilemergedialog.cpp  regfilemergedialog.h  registryfilerunnerplugin2.cpp  registryfilerunnerplugin2.h
qtwine/src/mainwindowparts/: metalistviewpart.cpp  metalistviewpart.h  shortcutslistpart.cpp  shortcutslistpart.h  shortcutslistpart.rc  wineconfigurationslistpart.cpp  wineconfigurationslistpart.h  wineconfigurationslistpart.rc  wineinstallationslistpart.cpp  wineinstallationslistpart.h  wineinstallationslistpart.rc
qtwine/src/models/: qtwinesqltablemodel.cpp  qtwinesqltablemodel.h  shortcutsmodel.cpp  wineconfigurationsmodel.cpp  wineconfigurationsmodel.h  wineinstallationsmodel.cpp  wineinstallationsmodel.h
qtwine/src/providers/: abstractsqltableprovider.cpp  abstractsqltableprovider.h  qtwinesqltablemodel.cpp  shortcutsmodel.h  shortcutsprovider.cpp  shortcutsprovider.h  wineconfigurationsprovider.cpp  wineconfigurationsprovider.h  wineinstallationsmodel.cpp  wineinstallationsprovider.cpp  wineinstallationsprovider.h
qtwine/src/utils/: urlrequestercapabledelegate.cpp  urlrequestercapabledelegate.h
qtwine/src/widgets/: executablerequester.cpp  executablerequester.h  iconrequesterbutton.cpp  iconrequesterbutton.h  infoseparator.cpp  infoseparator.h  metabar.cpp  metabar.h  metalistviewwidget.cpp  metalistviewwidget.h  metatextlabel.cpp  metatextlabel.h  winedlloverridesedit.cpp  winedlloverridesedit.h  winedlloverridesrequester.cpp  winedlloverridesrequester.h
qtwine/src/wizards/: createconfigurationwizard.cpp  createconfigurationwizard.h  createinstallationwizard.cpp  createinstallationwizard.h  installapplicationwizard.cpp  installapplicationwizard.h
terminal-helper/: CMakeLists.txt  terminal-helper.c
