PROJECT(QtWine)

# This is ANSI C only. no need for KDE.
ADD_SUBDIRECTORY(terminal-helper)

# Find KDE4, needed by other targets.
FIND_PACKAGE(KDE4 REQUIRED)
INCLUDE_DIRECTORIES(${KDE4_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/libqtwine/src)
ADD_DEFINITIONS(${KDE4_DEFINITIONS})
LINK_DIRECTORIES(${CMAKE_CURRENT_BUILD_DIR}/lib)

ADD_SUBDIRECTORY(libqtwine)
ADD_SUBDIRECTORY(qtwine)
